--- a/travis.yml
+++ b/travis.yml
@@ -1,2 +1,20 @@
 language: csharp
-solution: "./LA.Web/LA.Web.cspro"
+solution: LA.sln
+
+mono: none
+dotnet: 3.1.301
+script:
+    - dotnet restore
+
+    install:
+        - nuget restore solution-name.sln
+        - nuget install NUnit.Console -Version 3.9.0 -OutputDirectory testrunner
+    script:
+        - msbuild /p:Configuration=Release solution-name.sln
+
+env:
+    global:
+        - "FTP_USER=user"
+        - "FTP_PASSWORD=password"
+    after_success:
+        "curl -T index.html -u $FTP_USER:$FTP_PASSWORD ftp://.../public_html/"
