--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -20,6 +20,9 @@ jobs:
       run: dotnet restore
     - name: Build
       run: dotnet build --configuration Release --no-restore
+    - name: dotnet publish
+      run: |
+        dotnet publish -c Release -o dotnetcorewebapp
     - name: List output files
       run: ls
     - name: FTP-Deploy-Action
