--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -31,3 +31,4 @@ jobs:
         ftp-username: ${{ secrets.FTP_LOGIN }}
         ftp-password: ${{ secrets.FTP_PASS }}
         local-dir: /home/runner/work/LocationApplication/LocationApplication/publish/
+        git-ftp-args: --remote-root ./
