--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -28,7 +28,7 @@ jobs:
       run: ls
     - name: FTP-Deploy-Action
       uses: SamKirkland/FTP-Deploy-Action@3.1.1
-      env:
+      with:
         ftp-server: ${{ secrets.FTP_ADDRESS }}${{ secrets.FTP_PATH }}
         ftp-username: ${{ secrets.FTP_LOGIN }}
         ftp-password: ${{ secrets.FTP_PASS }}
