--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -23,7 +23,7 @@ jobs:
     - name: dotnet publish
       run: dotnet publish ./LA.Web/LA.Web.csproj -c Release --no-restore --no-dependencies -f netcoreapp3.1 --output ./dane --self-contained false
     - name: List output files
-      run: ls publish
+      run: ls dane
     - name: Local directory
       run: ls
     - name: FTP-Deploy-Action
