--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -18,15 +18,11 @@ jobs:
         dotnet-version: 3.1.301
     - name: Install dependencies
       run: dotnet restore
-    - name: Build
+    - name: Build project
       run: dotnet build --configuration Release --no-restore
-    - name: dotnet publish
+    - name: Publish project
       run: dotnet publish ./LA.Web/LA.Web.csproj -c Release --no-restore --no-dependencies -f netcoreapp3.1 --output ./dane --self-contained false
-    - name: List output files
-      run: ls dane
-    - name: Local directory
-      run: ls
-    - name: FTP-Deploy-Action
+    - name: Send files to FTP repository
       uses: sebastianpopp/ftp-action@releases/v2
       with:
         host: ${{ secrets.FTP_ADDRESS }}${{ secrets.FTP_PATH }}
