--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Build project
       run: dotnet build --configuration Release --no-restore
     - name: Publish project
-      run: dotnet publish ./LA.Web/LA.Web.csproj -c Release --no-restore -f netcoreapp3.1 --output ./dane
+      run: dotnet publish ./LA.Web/LA.Web.csproj -c Release -f netcoreapp3.1 --output ./dane --self-contained
     - name: Send files to FTP repository
       uses: sebastianpopp/ftp-action@releases/v2
       with:
