--- a/LA.Infrastructure/LA.Infrastructure.csproj
+++ b/LA.Infrastructure/LA.Infrastructure.csproj
@@ -4,4 +4,16 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.7" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\LA.Core\LA.Core.csproj" />
+  </ItemGroup>
+
 </Project>
