--- a/LA.Web/Properties/launchSettings.json
+++ b/LA.Web/Properties/launchSettings.json
@@ -2,6 +2,7 @@
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
+    "launchUrl": "locationapplication/",
     "iisExpress": {
       "applicationUrl": "http://localhost:49986",
       "sslPort": 0
@@ -19,6 +20,7 @@
     "LA.Web": {
       "commandName": "Project",
       "launchBrowser": true,
+      "launchUrl": "locationapplication/",
       "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
