--- a/LA.Web/Properties/launchSettings.json
+++ b/LA.Web/Properties/launchSettings.json
@@ -19,6 +19,7 @@
     "LA.Web": {
       "commandName": "Project",
       "launchBrowser": true,
+      "launchUrl": "locationapplication/",
       "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
