--- a/LA.Api/appsettings.Development.json
+++ b/LA.Api/appsettings.Development.json
@@ -5,5 +5,9 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "TempAppString": "Host=192.168.77.202;Database=testDB;Username=postgres;Password=kalifornia"
   }
 }
