--- a/LA.Api/appsettings.json
+++ b/LA.Api/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "TempAppString": "Host=192.168.77.202;Database=testDB;Username=postgres;Password=kalifornia"
+  }
 }
