--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -22,7 +22,7 @@ jobs:
       run: dotnet build --configuration Release --no-restore
     - name: Publish project
       run: dotnet publish ./LA.Api/LA.Api.csproj -c Release --no-restore -f netcoreapp3.1 --output ./dane --self-contained false
-    - name: Send files to FTP repository
+    - name: Send files to FTP repository ${{ secrets.FTP_ADDRESS }}${{ secrets.FTP_PATH }}
       uses: sebastianpopp/ftp-action@releases/v2
       with:
         host: ${{ secrets.FTP_ADDRESS }}${{ secrets.FTP_PATH }}
