--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -15,13 +15,17 @@ jobs:
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: 3.1
+        dotnet-version: '3.1.x'
+      
     - name: Install dependencies
       run: dotnet restore
+      
     - name: Build project
       run: dotnet build --configuration Release --no-restore
+      
     - name: Publish project
       run: dotnet publish ./LA.Api/LA.Api.csproj -c Release --no-restore -f netcoreapp3.1 --output ./dane --self-contained false
+      
     - name: Send files to FTP repository ${{ secrets.FTP_ADDRESS }}${{ secrets.FTP_PATH }}
       uses: sebastianpopp/ftp-action@releases/v2
       with:
@@ -29,6 +33,8 @@ jobs:
         user: ${{ secrets.FTP_LOGIN }}
         password: ${{ secrets.FTP_PASS }}
         localDir: "dane"
+    
+    # this part of code is response about restart service 
     - name: SSH Remote Commands
       uses: appleboy/ssh-action@v0.1.2
       with:
