--- a/LA.Api/appsettings.json
+++ b/LA.Api/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "TempAppString": "Host=192.168.77.202;Database=testDB;Username=postgres;Password=kalifornia"
+    "TempAppString": "Host=xxx.xxx.xxx.xxx;Database=xxx;Username=xxx;Password=xxx"
   }
 }
