--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -23,6 +23,9 @@ jobs:
     - name: Install dependencies
       run: cd src
       
+    - name: dir
+      run: ls
+      
     - name: Install dependencies
       run: dotnet restore
       
