--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -19,14 +19,9 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
           dotnet-version: '5.0.202'
-    
-    - name: dir1
-      run: ls
-      
-    - name: Install dependencies
-      run: cd src
-      
+
     - name: dir2
+      working-directory: ./src
       run: ls
       
     - name: Install dependencies
