--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -25,6 +25,7 @@ jobs:
       run: dotnet restore
       
     - name: Build project
+      working-directory: ./src
       run: dotnet build --configuration Release --no-restore
     
     - name: Publish projectq
