--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -15,20 +15,19 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - name: Setup .NET Core
+    - name: Setup .NET
       uses: actions/setup-dotnet@v1
       with:
-          dotnet-version: '5.0.202'
+          dotnet-version: '5.0.x'
 
     - name: Install dependencies
       working-directory: ./src
       run: dotnet restore
       
     - name: Build project
-      
       run: dotnet publish ./src/LA.Api/LA.Api.csproj -c Release --no-restore -f net5.0 --output ./dane --self-contained false
       
-    - name: Send files to FTP repository ${{ secrets.FTP_ADDRESS }}${{ secrets.FTP_PATH }}
+    - name: Send files to FTP repository
       uses: sebastianpopp/ftp-action@releases/v2
       with:
         host: ${{ secrets.FTP_ADDRESS }}${{ secrets.FTP_PATH }}
